Add configurable endpoint host and imp.tagid placement